@@ -6,6 +6,11 @@ Development version
 - In Router.dispatch(), if an exception occurs while handling an exception,
   raise it instead of trying to handle it again.
 
+- Fixed bug when writing a unicode string to Response and charset is not set.
+
+- Changed: the app won't fallback anymore to the exception handler set for
+  status 500 if handlers for other status are not set.
+
 
 Version 0.5.1 - August 17, 2010
 ===============================
